log/build_2026-05-06_08-15-51/tourguide_bringup/stdout_stderr.log
running develop
Removing /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide-bringup.egg-link (link to .)
running egg_info
writing ../../build/tourguide_bringup/tourguide_bringup.egg-info/PKG-INFO
writing dependency_links to ../../build/tourguide_bringup/tourguide_bringup.egg-info/dependency_links.txt
writing entry points to ../../build/tourguide_bringup/tourguide_bringup.egg-info/entry_points.txt
writing requirements to ../../build/tourguide_bringup/tourguide_bringup.egg-info/requires.txt
writing top-level names to ../../build/tourguide_bringup/tourguide_bringup.egg-info/top_level.txt
reading manifest file '../../build/tourguide_bringup/tourguide_bringup.egg-info/SOURCES.txt'
writing manifest file '../../build/tourguide_bringup/tourguide_bringup.egg-info/SOURCES.txt'
running build
running build_py
creating /home/husarion/Desktop/tourguide/build/tourguide_bringup/build
creating /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib
creating /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib/tourguide_bringup
copying tourguide_bringup/__init__.py -> /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib/tourguide_bringup
copying tourguide_bringup/tour_script.py -> /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib/tourguide_bringup
copying tourguide_bringup/semantic_bridge.py -> /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib/tourguide_bringup
running install
running install_lib
creating /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup
copying /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib/tourguide_bringup/__init__.py -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup
copying /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib/tourguide_bringup/tour_script.py -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup
copying /home/husarion/Desktop/tourguide/build/tourguide_bringup/build/lib/tourguide_bringup/semantic_bridge.py -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup
byte-compiling /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup/__init__.py to __init__.cpython-312.pyc
byte-compiling /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup/tour_script.py to tour_script.cpython-312.pyc
  File "/home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup/tour_script.py", line 14
    def  (x, y, z, qx, qy, qz, qw, offset_distance=1.0):
         ^
SyntaxError: invalid syntax

byte-compiling /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup/semantic_bridge.py to semantic_bridge.cpython-312.pyc
running install_data
copying resource/tourguide_bringup -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/ament_index/resource_index/packages
copying package.xml -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/tourguide_bringup
copying launch/vision.launch.py -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/tourguide_bringup/launch
copying launch/localization.launch.py -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/tourguide_bringup/launch
copying launch/mapping.launch.py -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/tourguide_bringup/launch
copying config/apriltags.yaml -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/tourguide_bringup/config
copying config/tour_waypoints.yaml -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/tourguide_bringup/config
copying config/tour_route.yaml -> /home/husarion/Desktop/tourguide/install/tourguide_bringup/share/tourguide_bringup/config
running install_egg_info
Copying ../../build/tourguide_bringup/tourguide_bringup.egg-info to /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/python3.12/site-packages/tourguide_bringup-0.0.0-py3.12.egg-info
running install_scripts
Installing conversation_service script to /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/tourguide_bringup
Installing semantic_bridge script to /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/tourguide_bringup
Installing tour_script script to /home/husarion/Desktop/tourguide/install/tourguide_bringup/lib/tourguide_bringup
writing list of installed files to '/home/husarion/Desktop/tourguide/build/tourguide_bringup/install.log'
